mesa (17.0.0~rc3-1ubuntu1) UNRELEASED; urgency=medium

  * Merge from Debian.
  * Drop patches for 16k wide textures on i965, upstream.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 07 Feb 2017 13:50:06 +0200

mesa (17.0.0~rc3-1) experimental; urgency=medium

  [ Timo Aaltonen ]
  * Drop libgles1.

  [ Andreas Boll ]
  * New upstream release candidate.
  * Drop transitional package libegl1-mesa-drivers.
  * Remove Breaks/Replaces from pre-jessie.
  * Explicitly disable LLVM on some arches. Should fix FTBFS on x32.
  * Drop configure.ac-Require-LLVM-for-r300-only-on-x86-and-x.patch,
    upstream.
  * Cherry-pick 045f38a (vulkan: Don't install vk_platform.h or
    vulkan.h).
  * Update list of unwanted vulkan headers.
  * Drop unused git-cleanup.sh script. Replaced with usage of --extend-
    diff-ignore some time ago.
  * Enable building etnaviv and imx on armhf (Closes: #852614).
    - Bump libdrm-dev build-dep to 2.4.74-2~.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Mon, 06 Feb 2017 19:05:30 +0100

mesa (17.0.0~rc2-1) experimental; urgency=medium

  * New upstream release candidate.
  * Add configure.ac-Require-LLVM-for-r300-only-on-x86-and-x.patch:
    Should fix FTBFS on some arches.
  * rules: Explicitly enable/disable gbm. Should fix FTBFS on hurd.
  * Revert to debhelper compat 9 (Workaround for #851130).

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Wed, 25 Jan 2017 16:45:53 +0100

mesa (17.0.0~rc1-1) experimental; urgency=medium

  * New upstream release candidate.
  * Bump libdrm-dev build-dep to 2.4.74 per configure.ac.
  * Bump libwayland-dev build-dep to 1.11.0 per configure.ac.
  * Remove libgcrypt20-dev build-dep per configure.ac.
  * Update watch url.
  * Drop vl-zscan-fix-Fix-trivial-sign-compare-warnings.diff and r600-
    sb-Fix-loop-optimization-related-hangs-on-eg.diff, upstream.
  * Drop workaround-binutils-mips-844357.diff, binutils regression has
    been fixed.
  * Rename EGL_DISPLAYS to EGL_PLATFORMS.
  * Update extend-diff-ignore.
